--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="title_section3">Section 3</string>
     <string name="title_section4">Section 4</string>
     <string name="action_settings">Settings</string>
+    <string name="dialog_title_pick_bluetooth_device">Pick a bluetooth device</string>
+    <string name="dialog_button_scan_device">Scan bluetooth device</string>
 
 </resources>
