--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="not_connected">Not Connected</string>
     
 	<string name="at_cmd_test">AT</string>
+	<string name="at_cmd_baud_get">AT+BAUD?</string>
 </resources>
