--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,6 @@
 
     <string name="app_name">ESC Manager</string>
     <string name="splash_screen_app_name">ESC\nManager</string>
-
     <string name="title_activity_main">ESC Manager</string>
     <string name="title_section_monitor">Monitor</string>
     <string name="title_section_general_setting">General Setting</string>
@@ -11,24 +10,22 @@
     <string name="title_section_other_setting">Other Setting</string>
     <string name="title_section_command_testing">Command Testing</string>
     <string name="title_section_protocol_testing">Protocol Testing</string>
-    	
-	<string name="action_connection_status">Connection Status</string>
+    <string name="action_connection_status">Connection Status</string>
     <string name="action_settings">Settings</string>
     <string name="action_settings_select_device">Select ESC</string>
-    
     <string name="title_activity_select_bluetooth_device_dialog">Select a ESC</string>
     <string name="dialog_text_paired_device_list">Paired device list</string>
     <string name="dialog_text_unpaired_device_list">Unpaired device list</string>
     <string name="dialog_text_no_paired_device">No paired device</string>
     <string name="dialog_button_scan_device">Scan bluetooth device</string>
-    
     <string name="hello_world">Hello world!</string>
     <string name="not_connected">Not Connected</string>
     <string name="not_available">N/A</string>
     <string name="hidden_password">****</string>
     <string name="btn_update">Update</string>
     <string name="btn_modify">Modify</string>
-        
+    <string name="btn_cancel">Cancel</string>
+    <string name="btn_ok">OK</string>
     <string name="tab_monitor_row_heading_description">Description</string>
     <string name="tab_monitor_row_heading_value">Value</string>
     <string name="tab_monitor_row_heading_unit">Unit</string>
@@ -38,7 +35,6 @@
     <string name="tab_monitor_row_motor_speed_cur_unit">rpm</string>
     <string name="tab_monitor_row_motor_speed_max_description">Motor Speed (Max)</string>
     <string name="tab_monitor_row_motor_speed_max_unit">rpm</string>
-
     <string name="tab_other_setting_row_heading_description">Description</string>
     <string name="tab_other_setting_row_heading_value">Value</string>
     <string name="tab_other_setting_row_heading_action">Action</string>
@@ -46,24 +42,30 @@
     <string name="tab_other_setting_row_esc_name">ESC Name (Bluetooth)</string>
     <string name="tab_other_setting_row_esc_password">ESC Password (Bluetooth)</string>
     <string name="tab_other_setting_row_bt_test">Bluetooth Test</string>
-
-    <string name="dialog_esc_name_title">Modify ESC name</string>
-    <string name="dialog_esc_name_message">Enter a new name (1-12 bytes)</string>
-    <string name="dialog_esc_name_btn_modify">Modify</string>
-    <string name="dialog_esc_name_btn_cancel">Cancel</string>
     
-	<string name="at_cmd_test">AT</string>
-	<string name="at_cmd_get_baud">AT+BAUD?</string>
-	<string name="at_cmd_get_parity_bit">AT+CHK?</string>
-	<string name="at_cmd_get_stop_bit">AT+STOP?</string>
-	<string name="at_cmd_get_uart">AT+UART?</string>
-	<string name="at_cmd_module_check">AT+SECH?</string>
-	<string name="at_cmd_app_check">AT+APCH?</string>
-	<string name="at_cmd_get_temp">AT+TEMP?</string>
-	<string name="at_cmd_get_name">AT+NAME?</string>
-	<string name="at_cmd_set_name">AT+NAME</string>
-	<string name="at_cmd_set_name_response">OK+Set:</string>
-	<string name="at_cmd_factory_default">AT+DEFAULT</string>
-	<string name="at_cmd_get_sw_version">AT+VERSION?</string>
-	<string name="at_cmd_get_address">AT+LADD?</string>
+    <string name="title_activity_name_input_dialog">Modify ESC name (Bluetooth)</string>
+    <string name="dialog_esc_name_message">Enter a new name\n(1&#8211;12 bytes, A&#8211;Z, a&#8211;z, 0&#8211;9)</string>
+    
+    <string name="title_activity_password_input_dialog">Modify ESC password (Bluetooth)</string>
+    <string name="dialog_esc_password_message_old">Enter the old password</string>
+    <string name="dialog_esc_password_message_new1">Enter the new password\n(1&#8211;12 bytes, A&#8211;Z, a&#8211;z, 0&#8211;9)</string>
+    <string name="dialog_esc_password_message_new2">Re-enter the new password again</string>
+    
+    <string name="at_cmd_test">AT</string>
+    <string name="at_cmd_set_response">OK+Set:</string>
+    <string name="at_cmd_get_baud">AT+BAUD?</string>
+    <string name="at_cmd_get_parity_bit">AT+CHK?</string>
+    <string name="at_cmd_get_stop_bit">AT+STOP?</string>
+    <string name="at_cmd_get_uart">AT+UART?</string>
+    <string name="at_cmd_module_check">AT+SECH?</string>
+    <string name="at_cmd_app_check">AT+APCH?</string>
+    <string name="at_cmd_get_temp">AT+TEMP?</string>
+    <string name="at_cmd_get_name">AT+NAME?</string>
+    <string name="at_cmd_set_name">AT+NAME</string>
+    <string name="at_cmd_get_pin">AT+PIN?</string>
+    <string name="at_cmd_set_pin">AT+PIN</string>
+    <string name="at_cmd_factory_default">AT+DEFAULT</string>
+    <string name="at_cmd_get_sw_version">AT+VERSION?</string>
+    <string name="at_cmd_get_address">AT+LADD?</string>
+
 </resources>
