some block can be transfer until block 11 not sure reason MCU: cedb89f4cdf7fa52a5f856b13a243b83dc2ff603

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -102,6 +102,8 @@
     <string name="ep_cmd_set_param">EP+SET+</string>
 
     <string name="ep_cmd_fwup_start">EP+FWUP+START</string>
+    <string name="ep_cmd_fwup_total_block_num">EP+FWUP+TBN:</string>
+    <string name="ep_cmd_fwup_block">EP+FWUP+BLK:</string>
 
     <string name="title_section_firmware_update">Firmware Update</string>
     <string name="tab_fwup_select_file">Select FW file</string>
